--- a/wisata-alam/Kebun-Teh-Nglinggo.html
+++ b/wisata-alam/Kebun-Teh-Nglinggo.html
@@ -56,7 +56,7 @@
           <div class="col-md-4 category">
             <a href="http://ingarta.id/wisata-alam/Kebun-Buah-Mangunan.html" class="desc_ImageOverlay img-responsive" style="background-image: url(../media/gambar/mang1.jpg);">
               <div class="desc">
-                <h2>Hutan Pinus Imogiri</h2>
+                <h2>Kebun Buah Mangunan</h2>
                 <p>Hutan Pinus Mangunan, begitulah bagian dari hutan di kawasan RPH (Resort Pengelolaan Hutan) Mangunan yang ditumbuhi tanaman Pinus merkusii ini disebut...</p>
               </div>
             </a>
