--- a/about.html
+++ b/about.html
@@ -20,27 +20,35 @@
     <!-- Global template main -->
     <link href="css/main.css" rel="stylesheet">
     <!--Load Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,900" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,900" rel="stylesheet">
   </head>
 
   <body class="background-change">
-    <nav class="navbar navbar-default">
+    <div class="navbar-wrapper">
       <div class="container">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="index.html">Ingarta</a>
-        </div>
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-          <ul class="nav navbar-nav navbar-right">
-            <!--Link Share-->
-            <li><a href="https://www.facebook.com/sharer.php?u=http://ingarta.id/" target="_top"><i class="fa fa-facebook-official fa-lg"></i></a></li>
-            <li><a href="https://www.instagram.com/ingarta.id/" target="_blank"><i class="fa fa-instagram fa-lg"></i></a></li>
-            <div class="button">
-              <a class="btn-open" href="#"></a>
+
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
+              <a class="navbar-brand" href="index.html"><img src="media/gambar/logo-v2.png" width="100px"></a>
             </div>
-          </ul>
-        </div>
+            <div id="navbar" class="navbar-collapse collapse">
+              <ul class="nav navbar-nav navbar-right">
+                <!--Link Share-->
+                <li><a href="https://www.facebook.com/sharer.php?u=http://ingarta.id/about.html" target="_top"><i class="fa fa-facebook-official fa-lg"></i></a></li>
+                <li><a href="https://www.instagram.com/ingarta.id/" target="_blank"><i class="fa fa-instagram fa-lg"></i></a></li>
+                <div class="button">
+                  <a class="btn-open" href="#"></a>
+                </div>
+              </ul>
+            </div>
+          </div>
+
       </div>
-    </nav>
     <!--Kategori-->
     <div class="overlay">
     	<div class="container-fluid">
@@ -257,7 +265,7 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron">
       <div class="container text-center">
-        <h2>Mengenal lebih dekat dengan kami, Tim pembuat Ingarta - Amazing Yogyakarta.</h2>
+        <h2 style="color:white;">Mengenal lebih dekat dengan kami, <br> Tim pembuat Ingarta - Amazing Yogyakarta.</h2>
       </div>
     </div>
 
