--- a/wisata-alam/Embung-Batara-Sriten.html
+++ b/wisata-alam/Embung-Batara-Sriten.html
@@ -35,11 +35,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#"><img src="../media/gambar/logo-v2.png" width="100px"></a>
+              <a class="navbar-brand" href="index.html"><img src="../media/gambar/logo-v2.png" width="100px"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
-                
+
                 <!--Link Share-->
             <li><a href="https://www.facebook.com/sharer.php?u=http://ingarta.id/wisata-alam/Embung-Batara-Sriten.html" target="_top"><i class="fa fa-facebook-official fa-lg"></i></a></li>
             <li><a href="https://www.instagram.com/ingarta.id" target="_blank"><i class="fa fa-instagram fa-lg"></i></a></li>
@@ -351,7 +351,7 @@
       <br>
       <br>
       <br>
-      
+
 
       <div class="container-fluid text-center">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.599792359127!2d110.633017!3d-7.832111299999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a4be555555555%3A0x404cf863f23e1aaa!2sEmbung+Batara+Sriten!5e0!3m2!1sid!2sid!4v1494130318192" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
