--- a/wisata-alam/Gunung-Nglanggeran.html
+++ b/wisata-alam/Gunung-Nglanggeran.html
@@ -20,7 +20,7 @@
     <!-- Global template main -->
     <link href="../css/main.css" rel="stylesheet">
     <!--Load Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,900" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,900" rel="stylesheet">
   </head>
 <!-- NAVBAR
 ================================================== -->
@@ -35,7 +35,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#"><img src="../media/gambar/logo-v2.png" width="100px"></a>
+              <a class="navbar-brand" href="index.html"><img src="../media/gambar/logo-v2.png" width="100px"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
@@ -289,7 +289,7 @@
     </div>
 
 
-   
+
 
 
     <!-- Marketing messaging and featurettes
@@ -356,12 +356,12 @@
       </div>
 
 
-      
+
       </div>
       </div>
 
       <div class="container-fluid text-center">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.519669627352!2d110.54281131403758!3d-7.840550280073319!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a4e387a29a565%3A0xb84ed0a0fcb97401!2sGunung+Nglanggeran!5e0!3m2!1sen!2sid!4v1495209965209" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>           
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.519669627352!2d110.54281131403758!3d-7.840550280073319!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a4e387a29a565%3A0xb84ed0a0fcb97401!2sGunung+Nglanggeran!5e0!3m2!1sen!2sid!4v1495209965209" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
 
 
