--- a/wisata-alam/Hutan-Pinus-Mangunan.html
+++ b/wisata-alam/Hutan-Pinus-Mangunan.html
@@ -34,7 +34,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#"><img src="../media/gambar/logo-v2.png" width="100px"></a>
+              <a class="navbar-brand" href="index.html"><img src="../media/gambar/logo-v2.png" width="100px"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
@@ -347,7 +347,7 @@
       <br>
       <br>
       <br>
-      
+
 
       <div class="container-fluid text-center">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d246.98207249458758!2d110.4323403012826!3d-7.924999106507626!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a537b70240a25%3A0xae293c5c0a258096!2sHutan+Pinus+Nganjir!5e0!3m2!1sid!2sid!4v1494129110883" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
