--- a/wisata-alam/Goa-Kiskendo.html
+++ b/wisata-alam/Goa-Kiskendo.html
@@ -35,11 +35,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#"><img src="../media/gambar/logo-v2.png" width="100px"></a>
+              <a class="navbar-brand" href="index.html"><img src="../media/gambar/logo-v2.png" width="100px"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
-                
+
                 <!--Link Share-->
                 <li><a href="https://www.facebook.com/sharer.php?u=http://ingarta.id/wisata-alam/Goa-Kiskendo.html" target="_top"><i class="fa fa-facebook-official fa-lg"></i></a></li>
                 <li><a href="https://www.instagram.com/ingarta.id/" target="_blank"><i class="fa fa-instagram fa-lg"></i></a></li>
