--- a/wisata-alam/Goa-Rancang-Kencono.html
+++ b/wisata-alam/Goa-Rancang-Kencono.html
@@ -35,7 +35,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#"><img src="../media/gambar/logo-v2.png" width="100px"></a>
+              <a class="navbar-brand" href="index.html"><img src="../media/gambar/logo-v2.png" width="100px"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
