--- a/wisata-alam/Pantai-Glagah.html
+++ b/wisata-alam/Pantai-Glagah.html
@@ -35,7 +35,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#"><img src="../media/gambar/logo-v2.png" width="100px"></a>
+              <a class="navbar-brand" href="index.html"><img src="../media/gambar/logo-v2.png" width="100px"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
@@ -397,7 +397,7 @@
       <br>
       <br>
       <br>
-      
+
 
       <div class="container-fluid text-center">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15807.307706585383!2d110.05884022711211!3d-7.913140958793311!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7ae3eabc6bcd63%3A0x77a64b4be190f4ae!2sPantai+Glagah!5e0!3m2!1sid!2sid!4v1494256058445" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
