--- a/wisata-alam/Pantai-Ndrini.html
+++ b/wisata-alam/Pantai-Ndrini.html
@@ -20,7 +20,7 @@
     <!-- Global template main -->
     <link href="../css/main.css" rel="stylesheet">
     <!--Load Fonts-->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:400,900" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Raleway:400,900" rel="stylesheet">
   </head>
 <!-- NAVBAR
 ================================================== -->
@@ -35,7 +35,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#"><img src="../media/gambar/logo-v2.png" width="100px"></a>
+              <a class="navbar-brand" href="index.html"><img src="../media/gambar/logo-v2.png" width="100px"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
@@ -352,12 +352,12 @@
       </div>
 
 
-      
+
       </div>
       </div>
 
       <div class="container-fluid text-center">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1974.8199905181405!2d110.5764706578713!3d-8.138084393334806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7bba5dc5962655%3A0xea3d86bf61e8a749!2sDrini+Beach!5e0!3m2!1sen!2sid!4v1495209282276" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>            
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1974.8199905181405!2d110.5764706578713!3d-8.138084393334806!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7bba5dc5962655%3A0xea3d86bf61e8a749!2sDrini+Beach!5e0!3m2!1sen!2sid!4v1495209282276" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
 
 
@@ -381,6 +381,6 @@
           open = false;
         });
     </script>
-    
+
   </body>
 </html>
