--- a/wisata-alam/Puncak-Kasakora.html
+++ b/wisata-alam/Puncak-Kasakora.html
@@ -35,7 +35,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#"><img src="../media/gambar/logo-v2.png" width="100px"></a>
+              <a class="navbar-brand" href="index.html"><img src="../media/gambar/logo-v2.png" width="100px"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
@@ -289,7 +289,7 @@
     </div>
 
 
-   
+
 
 
     <!-- Marketing messaging and featurettes
@@ -357,12 +357,12 @@ dari Jogja - Piyungan - Patuk - Sambipitu - Lanud TNI Gading - Siyono - Bundaran
       </div>
 
 
-      
+
       </div>
       </div>
 
       <div class="container-fluid text-center">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3951.5649668036413!2d110.4224126!3d-7.9404192!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a5366aaaaaaab%3A0x51f99091957cadfa!2sMangunan+Fruit+Garden!5e0!3m2!1sid!2sid!4v1493623171529" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>            
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3951.5649668036413!2d110.4224126!3d-7.9404192!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a5366aaaaaaab%3A0x51f99091957cadfa!2sMangunan+Fruit+Garden!5e0!3m2!1sid!2sid!4v1493623171529" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
 
 
