--- a/wisata-alam/Sendang-Ngembel.html
+++ b/wisata-alam/Sendang-Ngembel.html
@@ -35,7 +35,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="navbar-brand" href="#"><img src="../media/gambar/logo-v2.png" width="100px"></a>
+              <a class="navbar-brand" href="index.html"><img src="../media/gambar/logo-v2.png" width="100px"></a>
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
@@ -344,7 +344,7 @@
       <br>
       <br>
       <br>
-      
+
 
       <div class="container-fluid text-center">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3952.0864068409996!2d110.2921913!3d-7.8860285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7aff2db46a0d3b%3A0xd0f70d152de2869e!2sSendang+Ngembel!5e0!3m2!1sid!2sid!4v1494127453129" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
