--- a/wisata-alam/Parangtritis.html
+++ b/wisata-alam/Parangtritis.html
@@ -38,9 +38,11 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
-                <li class="active"><a href="facebook"><i class="fa fa-facebook-square fa-lg"></i></a></li>
-                <li><a href="#instagram"><i class="fa fa-instagram fa-lg"></i></a></li>
-                <li><a href="#close"><i class="fa fa-close (alias) fa-lg"></i></a></li>
+                <li><a href="https://www.facebook.com/sharer.php?u=http://ingarta.id/wisata-alam/Parangtritis.html" target="_top"><i class="fa fa-facebook-official fa-lg"></i></a></li>
+                <li><a href="https://www.instagram.com/ingarta.id/" target="_blank"><i class="fa fa-instagram fa-lg"></i></a></li>
+                <div class="button" style="top: 8px; right: none;position: normal">
+                  <a class="btn-open" href="#"></a>
+                </div>
               </ul>
             </div>
           </div>
