--- a/wisata-alam/Puncak-Kasakora.html
+++ b/wisata-alam/Puncak-Kasakora.html
@@ -42,7 +42,7 @@
                 <!--Link Share-->
                 <li><a href="https://www.facebook.com/sharer.php?u=http://ingarta.id/wisata-alam/Puncak-Kasakora.html" target="_top"><i class="fa fa-facebook-official fa-lg"></i></a></li>
                 <li><a href="https://www.instagram.com/ingarta.id/" target="_blank"><i class="fa fa-instagram fa-lg"></i></a></li>
-                <div class="button">
+                <div class="button" style="top: 8px; right: none;position: normal">
                   <a class="btn-open" href="#"></a>
                 </div>
               </ul>
