--- a/wisata-alam/Hutan-Pinus-Mangunan.html
+++ b/wisata-alam/Hutan-Pinus-Mangunan.html
@@ -39,7 +39,7 @@
             <div id="navbar" class="navbar-collapse collapse">
               <ul class="nav navbar-nav navbar-right">
                  <!--Link Share-->
-                <li><a href="https://www.facebook.com/sharer.php?u=http://ingarta.id/wisata-alam/Hutan-Pinus-Mangunan.html" target="_top"><i class="fa fa-facebook-official fa-lg"></i></a></li>
+                <li><a href="https://www.facebook.com/sharer.php?u=http://ingarta.id/wisata-alam/Hutan-Pinus-Mangunan.html" target="_blank"><i class="fa fa-facebook-official fa-lg"></i></a></li>
                 <li><a href="https://www.instagram.com/ingarta.id/" target="_blank"><i class="fa fa-instagram fa-lg"></i></a></li>
                 <div class="button" style="top: 8px; right: none;position: normal">
                   <a class="btn-open" href="#"></a>
@@ -349,7 +349,7 @@
       <br>
 
 
-      <div class="container-fluid text-center">
+      <div class="container-fluid">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d246.98207249458758!2d110.4323403012826!3d-7.924999106507626!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e7a537b70240a25%3A0xae293c5c0a258096!2sHutan+Pinus+Nganjir!5e0!3m2!1sid!2sid!4v1494129110883" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
       </div>
 
